adding some condition of triangles.

--- a/index.html
+++ b/index.html
@@ -25,4 +25,18 @@
        <br>
     <input type="submit" value="Check" onclick="checkMyTriangle()"/>
     
-  </form>
+</form>
+</div>
+<hr>
+<div class="header">
+<p><strong>Isosceles:</strong><br>Two sides are exactly equal.</p>
+<p><strong>Equilateral:</strong><br>All sides must be equal.</p>
+<p><strong>Scalene:</strong><br>None of the sides is equal. <br>However, the sum of any 
+  two sides of <br>the triangle must be greater <br>than the third side.</p>
+<p><strong>Not a triangle:</strong><br>Most importantly, if the sum of any <br>two sides of the triangle is equal to <br>or less than the third remaining side,
+  <br> then a triangle CANNOT be<br> formed using those values. </p>
+</div>
+
+</div>
+</body>
+</html>
