--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
    
-    <script src="js/ex.js"></script>
-    <link href="css/ex.css" rel="stylesheet" type="text/css">
+    <script src="js/index.js"></script>
+    <link href="css/index.css" rel="stylesheet" type="text/css">
     <title>Triangle Tracker</title>
   </head>
   <body>
