--- a/index.html
+++ b/index.html
@@ -28,15 +28,7 @@
 </form>
 </div>
 <hr>
-<div class="header">
-<p><strong>Isosceles:</strong><br>Two sides are exactly equal.</p>
-<p><strong>Equilateral:</strong><br>All sides must be equal.</p>
-<p><strong>Scalene:</strong><br>None of the sides is equal. <br>However, the sum of any 
-  two sides of <br>the triangle must be greater <br>than the third side.</p>
-<p><strong>Not a triangle:</strong><br>Most importantly, if the sum of any <br>two sides of the triangle is equal to <br>or less than the third remaining side,
-  <br> then a triangle CANNOT be<br> formed using those values. </p>
-</div>
-
+<img src="https://www.onlinemath4all.com/images/classifyingtrianglesbysides1.png">
 </div>
 <footer>
    <p>Copyright 2018 | Triangle-tracker | All Rights Reserved</p> 
