adding gh pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    
     <script src="js/index.js"></script>
     <link href="css/index.css" rel="stylesheet" type="text/css">
+    <link href="http://www.clker.com/cliparts/2/b/9/5/12581284321868063120sivvus_impossible_triangle.svg.hi.png" rel="icon" type="image/ico">
     <title>Triangle Tracker</title>
   </head>
   <body>
